read more button mobile responsive issue fixed - home page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -434,6 +434,9 @@
     .project-section .carousel-item .carousel-caption {
         bottom: 0px;
     }
+    .about-button {
+        width: 70%!important;
+    }
     .download-section {
         margin-bottom: 2rem!important;
     }
